--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
     </button>
   </div>
 
-  <div class="flex flex-row gap-4 btn-h ">
+  <div class="grid grid-cols-4 gap-4 btn-h ">
     <div class="basis-1/4 col">
       <button class="c-n" (click)="navigate(['/', 'create']);saveTypeBot()">
         <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon c-svg" stroke-width="2px" stroke-linecap="round"
@@ -119,10 +119,10 @@
         <h2 class="text-white" style="color:#fff;">Create a typebot</h2>
       </button>
     </div>
-    <div *ngFor="let typebot of saveTypebotArray | keyvalue" class="p-6 basis-1/4 border rounded-lg min-h-[250px] hover:bg-gray-100 cursor-pointer relative">
+    <div *ngFor="let typebot of saveTypebotArray" class="p-6 basis-1/4 border rounded-lg min-h-[250px] hover:bg-gray-100 cursor-pointer relative">
       <div class="flex items-center justify-between">
         <button type="button" class="w-7 h-7 text-blue-700 hover:bg-blue-100 p-1 rounded-md cursor-grabbing">
-          <svg viewBox="0 0 24 24" focusable="false" class="w-full" stroke-width="2px"
+          <svg  viewBox="0 0 24 24" focusable="false" class="w-full" stroke-width="2px"
             stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" aria-hidden="true" fill="none" style="stroke:#0042da !important">
             <circle cx="12" cy="9" r="1"></circle>
             <circle cx="19" cy="9" r="1"></circle>
@@ -151,13 +151,16 @@
         </ul>
       </div>
       <div class="flex flex-col items-center justify-center h-full pb-14 gap-y-4">
-        <svg viewBox="0 0 24 24" focusable="false" class="w-8 h-8" stroke-width="2px" stroke-linecap="round"
+        <svg *ngIf="typebot.icon == 'Default'? true : false" viewBox="0 0 24 24" focusable="false" class="w-8 h-8" stroke-width="2px" stroke-linecap="round"
           stroke-linejoin="round" fill="none">
           <path
             d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z">
           </path>
         </svg>
-        <h2 class="font-medium">My typebot</h2>
+        <p class="text-3xl" *ngIf="typebot.icon != 'Default'">
+          {{typebot.icon}}
+        </p>
+        <h2 class="font-medium">{{typebot.name}}</h2>
       </div>
     </div>
   </div>
