--dashboard delete & duplicate functions updated

--- a/apps/builder/src/app/views/dashboard/dashboard.component.css
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.css
@@ -114,9 +114,9 @@ span.b-icon svg {
   margin: 43px 0 18px;
 }
 
-.btn-h span {
+/* .btn-h span {
   margin: 0 65px 0 59px;
-}
+} */
 
 .btn-h {
   margin-top: 15px;
