--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -119,7 +119,7 @@
         <h2 class="text-white" style="color:#fff;">Create a typebot</h2>
       </button>
     </div>
-    <div *ngFor="let typebot of saveTypebotArray" class="p-6 basis-1/4 border rounded-lg min-h-[250px] hover:bg-gray-100 cursor-pointer relative">
+    <div *ngFor="let typebot of saveTypebotArray; let indexOfelement=index;" class="p-6 basis-1/4 border rounded-lg min-h-[250px] hover:bg-gray-100 cursor-pointer relative">
       <div class="flex items-center justify-between">
         <button type="button" class="w-7 h-7 text-blue-700 hover:bg-blue-100 p-1 rounded-md cursor-grabbing">
           <svg  viewBox="0 0 24 24" focusable="false" class="w-full" stroke-width="2px"
@@ -132,8 +132,8 @@
             <circle cx="5" cy="15" r="1"></circle>
           </svg>
         </button>
-        <span *ngIf="false">Live</span>
-        <button (click)="handleOption($event,typebot.key)" [attr.data-btn]="typebot.key" type="button" class="border rounded-md w-7 h-7 dontHide">
+        <span class="bg-blue-700 py-1 px-3 rounded-md text-sm font-medium text-white" *ngIf="typebot.status != 'not-live' ? true : false">Live</span>
+        <button (click)="handleOption($event,indexOfelement)" [attr.data-btn]="indexOfelement" type="button" class="border rounded-md w-7 h-7 dontHide">
           <svg viewBox="0 0 24 24" focusable="false" class="w-full p-1 dontHide option-btn" stroke-width="2px"
             stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" fill="none">
             <circle cx="12" cy="12" r="1"></circle>
@@ -141,11 +141,11 @@
             <circle cx="12" cy="19" r="1"></circle>
           </svg>
         </button>
-        <ul [attr.data-option]="typebot.key" class="absolute -right-36 py-2 bg-white border rounded-lg shadow-lg top-16 w-full max-w-[200px] typebot-option hidden dontHide z-10">
-          <li (click)="duplicateWorkspace(typebot.key)" class="cursor-pointer flex items-center gap-2 px-4 py-1 hover:bg-gray-100 dontHide">
+        <ul [attr.data-option]="indexOfelement" class="absolute -right-36 py-2 bg-white border rounded-lg shadow-lg top-16 w-full max-w-[200px] typebot-option hidden dontHide z-10">
+          <li (click)="duplicateWorkspace(typebot)" class="cursor-pointer flex items-center gap-2 px-4 py-1 hover:bg-gray-100 dontHide">
             Duplicate
           </li>
-          <li (click)="deleteWorkspace(typebot.key)" class="text-red-500 flex items-center gap-2 px-4 py-1 hover:bg-gray-100 cursor-pointer dontHide">
+          <li (click)="deleteWorkspace(indexOfelement)" class="text-red-500 flex items-center gap-2 px-4 py-1 hover:bg-gray-100 cursor-pointer dontHide">
             Delete
           </li>
         </ul>
