--- a/apps/builder/src/app/views/editor/editor.component.html
+++ b/apps/builder/src/app/views/editor/editor.component.html
@@ -164,23 +164,10 @@
     </div>
     <!-- ZOOM BUTTONS - [begins] -->
     <div class="absolute z-10 top-6 right-6 transform-position">
-      <div
-        class="mt-2 z-5 bg-white hover:bg-gray-200 rounded-b-md p-0.5 w-8 h-8 flex items-center justify-center cursor-pointer rounded-md"
-        (click)="printJson()" style="position: absolute; top: 114px;  right: 0px;">
-        <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-          id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
-          xml:space="preserve">
-          <g>
-            <g>
-              <path
-                d="M440.125,0H0v512h512V71.875L440.125,0z M281.6,31.347h31.347v94.041H281.6V31.347z M136.359,31.347h113.894v125.388    h94.041V31.347h32.392v156.735H136.359V31.347z M417.959,480.653H94.041V344.816h323.918V480.653z M417.959,313.469H94.041    v-31.347h323.918V313.469z M480.653,480.653h-31.347V250.775H62.694v229.878H31.347V31.347h73.665v188.082h303.02V31.347h19.108    l53.512,53.512V480.653z" />
-            </g>
-          </g>
-        </svg>
-      </div>
+
       <div class="custom-shadow-icon">
         <a (click)="editorSettingsToggle()"
-          class="{{editorSettings? 'bg-gray-200':'bg-white'}} hover:bg-gray-200 rounded-md  w-8 h-8 flex items-center justify-center cursor-pointer">
+          class="{{editorSettings? 'bg-gray-200':'bg-white'}} hover:bg-gray-200 rounded-md  w-8 h-8 flex items-center justify-center cursor-pointer shadow-lg">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-full h-full setting-icon p-1.5" fill="none"
             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -206,7 +193,7 @@
       </div>
       <div class="mt-4 custom-shadow-icon">
         <a (click)="zoomHandler('increase')"
-          class="bg-white hover:bg-gray-200 rounded-t-md p-0.5 w-8 h-8 flex items-center justify-center cursor-pointer">
+          class="bg-white hover:bg-gray-200 rounded-t-md p-0.5 w-8 h-8 flex items-center justify-center cursor-pointer shadow-lg">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"
             stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
@@ -219,6 +206,20 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M18 12H6" />
           </svg>
         </a>
+      </div>
+      <div
+        class="mt-2 z-5 bg-white hover:bg-gray-200 rounded-b-md p-0.5 w-8 h-8 flex items-center justify-center cursor-pointer rounded-md shadow-lg"
+        (click)="printJson()" style="position: absolute; top: 114px;  right: 0px;">
+        <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+          id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
+          xml:space="preserve">
+          <g>
+            <g>
+              <path
+                d="M440.125,0H0v512h512V71.875L440.125,0z M281.6,31.347h31.347v94.041H281.6V31.347z M136.359,31.347h113.894v125.388    h94.041V31.347h32.392v156.735H136.359V31.347z M417.959,480.653H94.041V344.816h323.918V480.653z M417.959,313.469H94.041    v-31.347h323.918V313.469z M480.653,480.653h-31.347V250.775H62.694v229.878H31.347V31.347h73.665v188.082h303.02V31.347h19.108    l53.512,53.512V480.653z" />
+            </g>
+          </g>
+        </svg>
       </div>
     </div>
     <!-- ZOOM BUTTONS - [ends] -->
