--- a/apps/viewer/src/app/components/fields/file-input/file-input.component.html
+++ b/apps/viewer/src/app/components/fields/file-input/file-input.component.html
@@ -1,1 +1,22 @@
-<p>file-input works!</p>
+<form class="flex flex-col w-full">
+  <label for="dropzone-file"
+    class="flex flex-col items-center justify-center w-full px-8 py-6 mb-2 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer typebot-upload-input bg-gray-50 hover:bg-gray-100 ">
+    <div class="flex flex-col items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24"
+        height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+        stroke-linejoin="round" class="mb-3">
+        <polyline points="16 16 12 12 8 16"></polyline>
+        <line x1="12" y1="12" x2="12" y2="21"></line>
+        <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path>
+        <polyline points="16 16 12 12 8 16"></polyline>
+      </svg>
+      <p class="text-sm text-center text-gray-500">
+        <strong>
+          Click to upload
+        </strong> or drag and drop<br>
+        (size limit: 10MB)
+      </p>
+    </div>
+    <input id="dropzone-file" type="file" class="hidden">
+  </label>
+</form>
