--- a/apps/viewer/src/app/components/chat-bot/container.component.html
+++ b/apps/viewer/src/app/components/chat-bot/container.component.html
@@ -95,7 +95,7 @@
               [items]="bot.items" [multipleChoice]="bot.options.isMultipleChoice"></app-choice-input>
           </div>
           <div *ngIf="bot?.type === 'file_input'" class="w-full {{bot?.type}}-main">
-            <app-file-input></app-file-input>
+            <app-file-input (nextStep)="renderNextStep()"></app-file-input>
           </div>
           <div *ngIf="bot.type === 'error'" class="w-full {{bot?.type}}-main">
             <p class="p-4 mt-3 rounded-lg bg-gray-50 w-fit">
