--- a/apps/viewer/src/app/components/fields/file-input/file-input.component.html
+++ b/apps/viewer/src/app/components/fields/file-input/file-input.component.html
@@ -1,5 +1,5 @@
 <form class="flex flex-col w-full">
-  <label for="dropzone-file"
+  <label
     class="flex flex-col items-center justify-center w-full px-8 py-6 mb-2 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer typebot-upload-input bg-gray-50 hover:bg-gray-100 ">
     <div class="flex flex-col items-center justify-center">
       <svg xmlns="http://www.w3.org/2000/svg" width="24"
@@ -17,6 +17,6 @@
         (size limit: 10MB)
       </p>
     </div>
-    <input id="dropzone-file" type="file" class="hidden">
+    <input (change)="NextStep($event)" accept="all" type="file" multiple  class="hidden">
   </label>
 </form>
