--rating-input implementation

--- a/apps/viewer/src/app/components/fields/rating-input/rating-input.component.css
+++ b/apps/viewer/src/app/components/fields/rating-input/rating-input.component.css
@@ -1,5 +1,6 @@
 .selected-rating svg{
-  fill:rgb(37 99 235);
+  fill:rgb(37 99 235) ;
+  stroke: rgb(37 99 235);
 }
 .button-selected-rating{
   background-color:rgb(37 99 235);
