--- a/apps/viewer/src/app/components/fields/rating-input/rating-input.component.html
+++ b/apps/viewer/src/app/components/fields/rating-input/rating-input.component.html
@@ -19,14 +19,29 @@
       [attr.svg-index] = index
       (click)="selectRating($event,'svg',index)"
       >
-      <svg
-        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
-        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 w-10 h-10 ">
-        <polygon
-        class="polygon"
-          points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
-        </polygon>
-      </svg>
+      <div *ngIf="data.options.customIcon.isEnabled == false">
+        <svg
+          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 w-10 h-10 ">
+          <polygon
+          class="polygon"
+            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+          </polygon>
+        </svg>
+      </div>
+      <div *ngIf="data.options.customIcon.isEnabled == true">
+        <div *ngIf="data.options.customIcon.svg == ''">
+          <svg
+          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 w-10 h-10 ">
+          <polygon
+          class="polygon"
+            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+          </polygon>
+        </svg>
+        </div>
+        <div *ngIf="data.options.customIcon.svg != ''" class="custom-svg" [innerHTML]="data.options.customIcon.svg | html"></div>
+      </div>
     </div>
   </div>
   <div *ngIf="data.options.labels.right != ''"
