--- a/apps/viewer/src/app/components/fields/file-input/file-input.component.html
+++ b/apps/viewer/src/app/components/fields/file-input/file-input.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-col w-full">
+<form  *ngIf="!fileUploaded" class="flex flex-col w-full">
   <label
     class="flex flex-col items-center justify-center w-full px-8 py-6 mb-2 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer typebot-upload-input bg-gray-50 hover:bg-gray-100 ">
     <div class="flex flex-col items-center justify-center">
@@ -20,3 +20,7 @@
     <input (change)="NextStep($event)" accept="all" type="file" multiple  class="hidden">
   </label>
 </form>
+
+<div  *ngIf="fileUploaded" class="w-full">
+  <p class="bg-[#FF8E21] app-bg-color px-4 py-2 rounded-lg mr-2 whitespace-pre-wrap max-w-full w-fit cursor-pointer text-white ml-auto">File uploaded</p>
+</div>
