--- a/apps/viewer/src/app/components/fields/rating-input/rating-input.component.html
+++ b/apps/viewer/src/app/components/fields/rating-input/rating-input.component.html
@@ -1,67 +1,70 @@
 <form class="flex flex-col">
+  <!-- <div class="rating-reason-main">
+    <p>{{data.options.ratingReason}}</p>
+  </div> -->
   <div *ngIf="defaultView">
-  <span *ngIf="data.options.labels.left != ''"
-    class="text-sm w-full mb-2 rating-label pl-2">{{data.options.labels.left}}</span>
-  <div *ngIf="data.options.buttonTypes == 'Numbers'" class="flex flex-wrap justify-end">
-    <button
-      *ngFor="let item of ratingArr; let index"
-      class="py-2 px-4 mr-2 mb-2 text-left font-semibold rounded-md transition-all hover:bg-gray-100 focus:outline-none border border-blue-600"
-      id = 'button-svg-{{index}}'
-      [attr.svg-index] = index
-      (click)="selectRating($event,'button',index)"
-      type="button"
-      >{{index+1}}</button>
-  </div>
-  <div *ngIf="data.options.buttonTypes == 'Icons'" class="flex flex-wrap justify-end">
-    <div *ngFor="let item of ratingArr,let index"
-      class="flex justify-center items-center rating-icon-container cursor-pointer mr-2 mb-2 "
-      id = 'fill-svg-{{index}}'
-      [attr.svg-index] = index
-      (click)="selectRating($event,'svg',index)"
-      >
-      <div *ngIf="data.options.customIcon.isEnabled == false">
-        <svg
-          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
-          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 w-10 h-10 ">
-          <polygon
-          class="polygon"
-            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
-          </polygon>
-        </svg>
-      </div>
-      <div *ngIf="data.options.customIcon.isEnabled == true">
-        <div *ngIf="data.options.customIcon.svg == ''">
+    <span *ngIf="data.options.labels.left != ''"
+      class="w-full pl-2 mb-2 text-sm rating-label">{{data.options.labels.left}}</span>
+    <div *ngIf="data.options.buttonTypes == 'Numbers'" class="flex flex-wrap justify-end">
+      <button
+        *ngFor="let item of ratingArr; let index"
+        class="px-4 py-2 mb-2 mr-2 font-semibold text-left transition-all border border-blue-600 rounded-md hover:bg-gray-100 focus:outline-none"
+        id = 'button-svg-{{index}}'
+        [attr.svg-index] = index
+        (click)="selectRating($event,'button',index)"
+        type="button"
+        >{{index+1}}</button>
+    </div>
+    <div *ngIf="data.options.buttonTypes == 'Icons'" class="flex flex-wrap justify-end">
+      <div *ngFor="let item of ratingArr,let index"
+        class="flex items-center justify-center mb-2 mr-2 cursor-pointer rating-icon-container "
+        id = 'fill-svg-{{index}}'
+        [attr.svg-index] = index
+        (click)="selectRating($event,'svg',index)"
+        >
+        <div *ngIf="data.options.customIcon.isEnabled == false">
           <svg
-          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
-          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600 w-10 h-10 ">
-          <polygon
-          class="polygon"
-            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
-          </polygon>
-        </svg>
+            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-10 h-10 text-blue-600 ">
+            <polygon
+            class="polygon"
+              points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+            </polygon>
+          </svg>
         </div>
-        <div *ngIf="data.options.customIcon.svg != ''" class="custom-svg" [innerHTML]="data.options.customIcon.svg | html"></div>
+        <div *ngIf="data.options.customIcon.isEnabled == true">
+          <div *ngIf="data.options.customIcon.svg == ''">
+            <svg
+            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="rgb(37 99 235)"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-10 h-10 text-blue-600 ">
+            <polygon
+            class="polygon"
+              points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+            </polygon>
+          </svg>
+          </div>
+          <div *ngIf="data.options.customIcon.svg != ''" class="custom-svg" [innerHTML]="data.options.customIcon.svg | html"></div>
+        </div>
       </div>
     </div>
+    <div *ngIf="data.options.labels.right != ''"
+      class="flex items-center justify-end w-full px-4 mb-2 text-sm">
+      <span>
+        {{data.options.labels.right}}
+      </span>
+    </div>
+    <div *ngIf="sendButton" class="flex items-center justify-end w-full">
+      <button
+        id="send-btn-rating"
+        (click)="NextStep()"
+        class="mr-2 bg-[#0042DA] app-btn-bg py-2 px-4 font-semibold rounded-md text-white focus:outline-none items-center transition-all
+        my-2 ml-2"
+        type="button"
+      >{{data.options.labels.button}}
+      </button>
+    </div>
   </div>
-  <div *ngIf="data.options.labels.right != ''"
-    class="text-sm w-full flex justify-end items-center mb-2 px-4">
-    <span>
-      {{data.options.labels.right}}
-    </span>
-  </div>
-  <div *ngIf="sendButton" class="w-full flex justify-end items-center">
-    <button
-      id="send-btn-rating"
-      (click)="NextStep()"
-      class="mr-2 bg-[#0042DA] app-btn-bg py-2 px-4 font-semibold rounded-md text-white focus:outline-none items-center transition-all
-      my-2 ml-2"
-      type="button"
-    >{{data.options.labels.button}}
-    </button>
-  </div>
-</div>
-  <div class="items-center justify-end w-full gap-2 receiver-view flex">
+  <div class="flex items-center justify-end w-full gap-2 receiver-view">
     <span id="received-rating-value" class="bg-[#FF8E21] app-bg-color px-4 py-2 rounded-lg mr-2 whitespace-pre-wrap max-w-full w-fit cursor-pointer text-white hidden"></span>
   </div>
 </form>
