--- a/apps/builder/src/app/views/editor/editor.component.html
+++ b/apps/builder/src/app/views/editor/editor.component.html
@@ -14,7 +14,31 @@
             <div *ngFor="let b of groupBlocks; let groupIndex = index" [attr.data-group-index]="groupIndex" [id]="b.id"
               [attr.data-jtk-managed]="b.id" data-identifier="group" class="{{b.name}} absolute grouper z-2"
               [style]="('top:'+ b.position.y+'px;left:'+ b.position.x+'px')">
-              <div class="py-4 bg-white single-group wrap-div w-72">
+              <div (click)="showShortcuts('shortcut-'+groupIndex,b.id)" class="py-4 bg-white single-group wrap-div w-72 relative">
+                <div #shortcutsDiv [id]="'shortcut-'+groupIndex" class="touch-none opacity-0 flex items-center absolute right-0 top-0 shadow bg-white border rounded ease-in-out delay-300 transition-all duration-300">
+                  <button (click)="showRightBar()" type="button"
+                    class="play-button rounded p-1.5 w-fit cursor-pointer hover:bg-gray-100"
+                    aria-label="Preview bot from this group">
+                    <svg viewBox="0 0 24 24" focusable="false" class="w-3.5 h-3.5" stroke="black" stroke-width="2px"
+                      stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" fill="transparent">
+                      <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                    </svg>
+                  </button>
+                  <button class="duplicate-button rounded p-1.5 w-fit cursor-pointer hover:bg-gray-100">
+                    <svg viewBox="0 0 24 24" focusable="false" class="w-3.5 h-3.5" fill="transparent" stroke="black"
+                      stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                      <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                      <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                    </svg>
+                  </button>
+                  <button (click)="popoverHandler('group', b.id, groupIndex)" class="delete-button rounded p-1.5 w-fit cursor-pointer hover:bg-gray-100">
+                    <svg viewBox="0 0 24 24" focusable="false" class="w-3.5 h-3.5" fill="transparent" stroke="black" stroke-width="2px"
+                      stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                      <polyline points="3 6 5 6 21 6"></polyline>
+                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                    </svg>
+                  </button>
+                </div>
                 <div class="flex items-center justify-between px-4">
                   <h2 class="w-full" (contextmenu)="showRightClickPopover('group', b.id, $event)">
                     <span (click)="onGroupNameClick(groupIndex)" class="w-fit p-1 rounded-md transition-all cursor-text
@@ -26,14 +50,7 @@
                       autofocus class="w-full p-1 text-base text-gray-700 outline-2 outline outline-[#7ea6ff] shadow-md rounded-lg bg-white placeholder:text-gray-700 placeholder:font-normal placeholder:text-base focus:outline-[#7ea6ff]
                       {{editedGroupName === groupIndex ? 'block' : 'hidden'}}" />
                   </h2>
-                  <button (click)="showRightBar()" type="button"
-                    class="play-button border rounded-md p-1.5 w-fit cursor-pointer hover:bg-gray-100"
-                    aria-label="Preview bot from this group">
-                    <svg viewBox="0 0 24 24" focusable="false" class="w-3.5 h-3.5" stroke="black" stroke-width="2px"
-                      stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" fill="transparent">
-                      <polygon points="5 3 19 12 5 21 5 3"></polygon>
-                    </svg>
-                  </button>
+
                 </div>
                 <div cdkDropList [cdkDropListData]="b.blocks" (cdkDropListDropped)="drop($event, 'box')"
                   class="block h-full mt-1 overflow-hidden dragAbleBox"
@@ -332,8 +349,7 @@
   <div class="custom-modal-main stripe-modal-content">
     <div
       class="px-6 py-4 bg-white border rounded-lg shadow w-[28rem] max-h-[400px] overflow-x-hidden  relative custom-scrollbar z-50 mx-auto stripe-modal-content">
-      <div aria-label="Close"
-        class="py-2 text-gray-700  w-full flex justify-between stripe-modal-content">
+      <div aria-label="Close" class="py-2 text-gray-700  w-full flex justify-between stripe-modal-content">
         <h2 class="font-medium ml-0 text-lg stripe-modal-content">Connect Stripe account</h2>
         <div id="close-stripe-modal" class="p-2 rounded-lg cursor-pointer hover:bg-gray-100">
           <svg viewBox="0 0 24 24" focusable="false" class="w-3 h-3 " aria-hidden="true">
@@ -352,32 +368,52 @@
         <label class="block my-4 text-base font-medium text-gray-700 dark:text-gray-300 stripe-modal-content">
           Account name:<span class="text-red-500">*</span>
         </label>
-        <input (input)="checkStripeField()" id="account" value="" type="text" class="stripe-modal-content stripe-input border outline-none rounded-lg block w-full p-2 text-sm text-gray-700" placeholder="Typebot">
-        <label class="flex items-center my-4 text-base font-medium text-gray-700 dark:text-gray-300 stripe-modal-content ">
-          Test Keys:<span><a class="border rounded-full border-gray-700 p-1 w-5 h-5 flex items-center justify-center ml-2 stripe-modal-content" title="Will be used when previewing the bot">?</a></span>
+        <input (input)="checkStripeField()" id="account" value="" type="text"
+          class="stripe-modal-content stripe-input border outline-none rounded-lg block w-full p-2 text-sm text-gray-700"
+          placeholder="Typebot">
+        <label
+          class="flex items-center my-4 text-base font-medium text-gray-700 dark:text-gray-300 stripe-modal-content ">
+          Test Keys:<span><a
+              class="border rounded-full border-gray-700 p-1 w-5 h-5 flex items-center justify-center ml-2 stripe-modal-content"
+              title="Will be used when previewing the bot">?</a></span>
         </label>
         <div class="grid grid-cols-2 gap-2 w-full items-center stripe-modal-content">
-          <input (input)="checkStripeField()" id="pk_test" value="" type="text" class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700" placeholder="pk_test_...">
-          <input (input)="checkStripeField()" id="sk_test" value="" type="text" class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700" placeholder="sk_test_...">
+          <input (input)="checkStripeField()" id="pk_test" value="" type="text"
+            class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700"
+            placeholder="pk_test_...">
+          <input (input)="checkStripeField()" id="sk_test" value="" type="text"
+            class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700"
+            placeholder="sk_test_...">
         </div>
         <label class="block my-4 text-base font-medium text-gray-700 dark:text-gray-300 stripe-modal-content">
           Live Keys:
         </label>
         <div class="grid grid-cols-2 gap-2 w-full items-center">
-          <input (input)="checkStripeField()" id="pk_live" value="" type="text" class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700" placeholder="pk_live_...">
-          <input (input)="checkStripeField()" id="sk_live" value="" type="text" class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700" placeholder="sk_live_...">
+          <input (input)="checkStripeField()" id="pk_live" value="" type="text"
+            class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700"
+            placeholder="pk_live_...">
+          <input (input)="checkStripeField()" id="sk_live" value="" type="text"
+            class="stripe-modal-content stripe-input border rounded-lg block w-full outline-none p-2 text-sm text-gray-700"
+            placeholder="sk_live_...">
         </div>
         <div>
           <p class="flex items-center mt-4 stripe-modal-content">(You can find your keys
-            <a class="underline flex items-center ml-1 gap-1 stripe-modal-content" href="https://dashboard.stripe.com/login?redirect=%2Fapikeys">
+            <a class="underline flex items-center ml-1 gap-1 stripe-modal-content"
+              href="https://dashboard.stripe.com/login?redirect=%2Fapikeys">
               here
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" focusable="false" class="w-4 h-4 stripe-modal-content" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" focusable="false"
+                class="w-4 h-4 stripe-modal-content" stroke-width="2px" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+              </svg>
             </a>
             )
           </p>
         </div>
         <div class="connect-btn w-full stripe-modal-content">
-          <button id="connect_stripe_btn" disabled class="block rounded-md px-4 py-2 ml-auto mt-4 text-sm font-medium text-white bg-blue-700  shadow-sm whitespace-nowrap publish-btn-main bg-opacity-50 stripe-modal-content">
+          <button id="connect_stripe_btn" disabled
+            class="block rounded-md px-4 py-2 ml-auto mt-4 text-sm font-medium text-white bg-blue-700  shadow-sm whitespace-nowrap publish-btn-main bg-opacity-50 stripe-modal-content">
             Connect
           </button>
         </div>
