--google authentication added

--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -76,7 +76,7 @@
             </span>
             New workspace
           </li>
-          <li class="flex items-center gap-2 px-4 py-1 logout hover:bg-gray-100 cursor-pointer">
+          <li (click)="logOut()" class="flex items-center gap-2 px-4 py-1 logout hover:bg-gray-100 cursor-pointer">
             <span>
               <svg viewBox="0 0 24 24" focusable="false" class=" w-4 h-4" fill="none"
                 stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
